[package]
name = "mlocktest"
version = "0.1.0"
authors = ["Angus Lees <gus@inodes.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0"
nix = "0.25"

[profile.release]
# https://github.com/rust-lang/rust/issues/72110
#strip = "symbols"
